--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     /* gradient band (gold shimmer) */
     .gold-shimmer{position:fixed;inset: -20% -50% auto -50%;height:60vh;transform:rotate(-12deg);background:linear-gradient(90deg, rgba(184,134,11,0.03), rgba(255,215,0,0.06) 40%, rgba(184,134,11,0.04));mix-blend-mode:overlay;z-index:-1;}
 
-    .container{max-width:var(--max-w);margin:0 auto;padding:40px 20px}
-    header{display:flex;align-items:center;justify-content:space-between;padding:18px 0;position:sticky;top:0;background:linear-gradient(180deg, rgba(7,7,7,0.45), rgba(7,7,7,0.2));backdrop-filter: blur(6px);z-index:40;border-bottom:1px solid rgba(255,255,255,0.03)}
+    .container{max-width:var(--max-w);margin:0 auto;padding:5px 20px}
+    header{display:flex;align-items:center;justify-content:space-between;padding:5px 0;position:sticky;top:0;background:linear-gradient(180deg, rgba(7,7,7,0.45), rgba(7,7,7,0.2));backdrop-filter: blur(6px);z-index:40;border-bottom:1px solid rgba(255,255,255,0.03)}
     .logo{display:flex;align-items:center;gap:12px}
     .logo .mark{width:44px;height:44px;border-radius:8px;background:linear-gradient(135deg,var(--gold),var(--gold-soft));box-shadow:0 6px 18px rgba(184,134,11,0.12);display:grid;place-items:center;font-weight:700;color:#090909}
     nav{display:flex;gap:18px;align-items:center}
@@ -43,9 +43,9 @@
     .cta{margin-left:12px;padding:8px 12px;border-radius:8px;background:linear-gradient(90deg,var(--gold),var(--gold-soft));color:#070707;font-weight:700;box-shadow:0 6px 18px rgba(184,134,11,0.12)}
 
     /* Hero */
-    .hero{min-height:78vh;display:grid;align-items:center;padding:40px 0}
+    .hero{min-height:78vh;display:grid;align-items:center;padding:1px 0}
     .hero-grid{display:grid;grid-template-columns:1fr 420px;gap:40px;align-items:center}
-    .title{font-size:clamp(28px,6.2vw,56px);line-height:1.02;margin:0 0 16px}
+    .title{font-size:clamp(25px,6.2vw,35px);line-height:1.02;margin:0 0 10px}
     .lead{color:rgba(220,220,220,0.85);margin-bottom:20px}
     .green-link{color:var(--accent-green);text-decoration:none;font-weight:700}
     .green-link:hover{color:#ffffff}
@@ -139,8 +139,8 @@
     <div class="logo">
       <div class="mark">V.8.2</div>
       <div>
-        <div style="font-weight:700;letter-spacing:0.6px">Okto Drone Autopilot Mapper Pro</div>
-        <div style="font-size:12px;color:rgba(255,255,255,0.35)">Profesional & Easy To Use</div>
+        <div style="font-weight:700;letter-spacing:0.6px">  Okto Drone Autopilot Mapper Pro</div>
+        <div style="font-size:12px;color:rgba(255,255,255,0.35)">  Profesional & Easy To Use</div>
       </div>
     </div>
     <nav role="navigation" aria-label="Main navigation">
@@ -157,13 +157,24 @@
     <section id="home" class="hero">
       <div class="hero-grid">
         <div>
-          <h1 class="title reveal">Thanks For Buying <span style="background:linear-gradient(90deg,var(--gold),var(--gold-soft));-webkit-background-clip:text;background-clip:text;color:transparent">Drone Autopilot Mapper Pro V.8.2</span> You Can Support Me by Donating through this QR Code </h1>
+          <h1 class="font-size:10px;title reveal">Thanks For Buying <span style="font-size:35px;background:linear-gradient(90deg,var(--gold),var(--gold-soft));-webkit-background-clip:text;background-clip:text;color:transparent">Drone Autopilot Mapper Pro V.8.2</span><br> You Can Support Me by Donating through this QR Code </h1>
+          <div class="reveal" style="display:flex;gap:18px;align-items:center;margin-top:18px">
+            <figure class="card" style="margin:0;max-width:320px;padding:5px;flex-shrink:0">
+              <img src="QROkto.jpeg" alt="QR code donasi" style="width:100%;height:auto;border-radius:8px;display:block" loading="lazy" />
+              <figcaption style="margin-top:8px;font-size:13px;color:rgba(255,255,255,0.7)">Scan QR untuk donasi</figcaption>
+            </figure>
+
+            <div style="color:rgba(255,255,255,0.85);max-width:560px">
+              <p style="margin:0 0 8px">Terimakasih Donasi Sahabat dan Telah Menghargai Kerja Keras Saya Dalam Membangun Aplikasi Ini 👋🥰</p>
+              <p style="margin:0"><a class="green-link" href="#donation">Nama Sahabat akan Muncul Disini →</a></p>
+            </div>
+          </div>
           <p class="lead reveal">Here's List of <a class="green-link" href="#">The Great People</a> Which have Donating Me and Supporting Me , Thankyou It Means alot!!(Saya Akan Terus Mengembangkan Software Ini 🚀🚀)</p>
-          <div style="display:flex;gap:12px;align-items:center" class="reveal">
+          <div style="display:flex;gap:5px;align-items:center" class="reveal">
             <a class="cta" href="#donation">The Great People</a>
             <a class="green-link" href="#tutorial">Software Tutorial →</a>
           </div>
-          <div style="margin-top:28px" class="card reveal">
+          <div style="margin-top:15px" class="card reveal">
             <div style="display:flex;justify-content:space-between;align-items:center">
               <div>
                 <div style="font-size:12px;color:rgba(255,255,255,0.6)">Target User Download</div>
