--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
               <p style="margin:0"><a class="green-link" href="#donation">Nama Abangku<br>akan Muncul Disini →</a></p>
             </div>
           </div>
-          <h1 class="font-size:10px;title reveal">Thanks For Buying <span style="font-size:35px;background:linear-gradient(90deg,var(--gold),var(--gold-soft));-webkit-background-clip:text;background-clip:text;color:transparent">Drone Autopilot Mapper Pro V.8.2</span><br> You Can Support Me<br>by Donating through<br>This QR Code </h1>
+          <h1 class="font-size:10px;title reveal">Thanks For Buying <span style="font-size:35px;background:linear-gradient(90deg,var(--gold),var(--gold-soft));-webkit-background-clip:text;background-clip:text;color:transparent">Drone Autopilot<br>Mapper Pro V.8.2</span><br> You Can Support Me<br>by Donating through<br>This QR Code </h1>
           <p class="lead reveal">Here's List of <a class="green-link" href="#">The Great People</a> Which have Donating Me and Supporting Me,<br>Thankyou It Means alot!!<br>(Saya Akan Terus Mengembangkan Software Ini 🚀🚀)</p>
           <div style="padding: 20px;display:flex;gap: 35px;px;align-items:center" class="reveal">
             <a class="cta" href="#donation">The Great People</a>
