--- a/index.html
+++ b/index.html
@@ -227,6 +227,69 @@
     /* kelas untuk teks yang akan sedikit bergerak mengikuti musik */
     .reactive{ will-change:transform; display:inline-block; transition:transform .16s linear; }
 
+    /* Welcome modal */
+    #welcome-overlay{
+      position:fixed;
+      inset:0;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      background:rgba(0,0,0,0.65);
+      z-index:9999;
+      padding:20px;
+    }
+    #welcome-modal{
+      width:min(720px, 96%);
+      max-width:720px;
+      background:linear-gradient(180deg, rgba(255,255,255,0.02), rgba(0,0,0,0.24));
+      border:1px solid rgba(255,255,255,0.04);
+      border-radius:12px;
+      padding:22px;
+      box-shadow:0 30px 80px rgba(0,0,0,0.6);
+      color:var(--text);
+      display:flex;
+      gap:18px;
+      align-items:center;
+    }
+    #welcome-modal .left {
+      width:92px;
+      height:92px;
+      border-radius:12px;
+      background:linear-gradient(135deg,var(--gold),var(--gold-soft));
+      display:grid;
+      place-items:center;
+      font-weight:900;
+      color:#070707;
+      font-size:18px;
+      flex-shrink:0;
+    }
+    #welcome-modal .content h2{
+      margin:0 0 8px;
+      font-size:20px;
+      color:var(--gold);
+    }
+    #welcome-modal .content p{ margin:0 0 12px; color:rgba(255,255,255,0.78) }
+    #welcome-modal .actions{ display:flex; gap:10px; margin-top:6px; }
+    #welcome-modal .btn {
+      padding:10px 14px;
+      border-radius:10px;
+      font-weight:700;
+      cursor:pointer;
+      border:1px solid rgba(255,255,255,0.04);
+      background:transparent;
+      color:var(--text);
+    }
+    #welcome-modal .btn.ok {
+      background:linear-gradient(90deg,var(--gold),var(--gold-soft));
+      color:#070707;
+      box-shadow:0 10px 30px rgba(184,134,11,0.14);
+    }
+    #welcome-modal .btn.cancel{ background:rgba(255,255,255,0.02) }
+
+    /* small: hide overlay when not needed */
+    .hidden { display:none !important; }
+
+
   </style>
 </head>
 <body>
@@ -430,6 +493,21 @@
         </div>
       </div>
     </section>
+
+    <!-- WELCOME MODAL -->
+    <div id="welcome-overlay" role="dialog" aria-modal="true" aria-labelledby="welcome-title" aria-describedby="welcome-desc">
+      <div id="welcome-modal" role="document">
+        <div class="left">V.8.2</div>
+        <div class="content">
+          <h2 id="welcome-title">Welcome To Drone Autopilot Mapper Pro</h2>
+          <p id="welcome-desc">Terimakasih sudah menggunakan Drone Autopilot Mapper Pro. Klik <strong>Oke</strong> untuk memulai musik latar dan melihat animasi reaktif.</p>
+          <div class="actions">
+            <button class="btn ok" id="welcome-ok">Oke, Mainkan Musik</button>
+            <button class="btn cancel" id="welcome-skip" aria-label="Tutup">Tutup</button>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <div id="audio-hint" class="audio-hint" role="status" aria-live="polite">
       Klik tombol musik untuk menyalakan suara
@@ -802,6 +880,72 @@
         return card;
       };
     })();
+
+      // Welcome modal behaviour: show on load, Oke -> trigger audio-control click
+      (function(){
+        const overlay = document.getElementById('welcome-overlay');
+        const okBtn = document.getElementById('welcome-ok');
+        const skipBtn = document.getElementById('welcome-skip');
+        const audioControl = document.getElementById('audio-control');
+
+        // safety: jika elemen tidak ada, jangan error
+        if(!overlay) return;
+
+        // focus management
+        function trapFocus(e){
+          const focusable = overlay.querySelectorAll('button, [href], input, select, textarea, [tabindex]:not([tabindex="-1"])');
+          if(!focusable.length) return;
+          const first = focusable[0], last = focusable[focusable.length-1];
+          if(e.key === 'Tab'){
+            if(e.shiftKey && document.activeElement === first){ e.preventDefault(); last.focus(); }
+            else if(!e.shiftKey && document.activeElement === last){ e.preventDefault(); first.focus(); }
+          } else if(e.key === 'Escape'){
+            closeModal();
+          }
+        }
+
+        function openModal(){
+          overlay.classList.remove('hidden');
+          // set initial focus to OK
+          okBtn.focus();
+          document.addEventListener('keydown', trapFocus);
+          document.body.style.overflow = 'hidden';
+        }
+        function closeModal(){
+          overlay.classList.add('hidden');
+          document.removeEventListener('keydown', trapFocus);
+          document.body.style.overflow = '';
+          // return focus to audio control for accessibility
+          if(audioControl) audioControl.focus();
+        }
+
+        // When user clicks OK: simulate click on existing audio-control to trigger play
+        okBtn.addEventListener('click', async (ev) => {
+          ev.preventDefault();
+          // close modal first (so gesture is considered user interaction)
+          closeModal();
+          // if audio control exists, click it (this will run your existing toggleAudio logic)
+          try{
+            if(audioControl){
+              audioControl.click();
+            } else {
+              // fallback: attempt to directly play bg audio
+              const bg = document.getElementById('bg-audio');
+              if(bg) { await bg.play().catch(()=>{}); }
+            }
+          }catch(e){ console.warn('welcome ok play error', e); }
+        });
+
+        // allow skip (close modal without autoplay)
+        skipBtn.addEventListener('click', (ev)=>{ ev.preventDefault(); closeModal(); });
+
+        // show modal once DOM fully loaded (or immediately if DOM already loaded)
+        if(document.readyState === 'loading'){
+          document.addEventListener('DOMContentLoaded', openModal, { once:true });
+        } else {
+          openModal();
+        }
+      })();
 
 
   </script>
