--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
         <div>
           <div class="reveal" style="display:flex;gap:18px;align-items:center;margin-top:18px">
             <figure class="card" style="margin:0;max-width:320px;padding:5px;flex-shrink:0">
-              <br><br><img src="QROkto.jpeg" alt="QR code donasi" style="width:80%;height:auto;border-radius:8px;display:block" loading="lazy" />
+              <br><img src="QROkto.jpeg" alt="QR code donasi" style="width:80%;height:auto;border-radius:8px;display:block" loading="lazy" />
               <figcaption style="margin-top:8px;font-size:13px;color:rgba(255,255,255,0.7)">Scan QR untuk donasi</figcaption>
             </figure>
             <div style="color:rgba(255,255,255,0.85);max-width:560px">
