--- a/index.html
+++ b/index.html
@@ -401,6 +401,26 @@
               <div class="shine" aria-hidden="true"></div>
             </article>
 
+            <article class="donor-card" role="listitem" data-visible="true" style="--delay:0.12s">
+              <div class="donor-avatar">YN</div>
+              <div class="donor-info">
+                <div class="donor-name">Yannone</div>
+                <div class="donor-meta"><span class="platform-pill">@obitokecil99 (tiktok)</span><span class="job">Surveyor Pro</span></div>
+              </div>
+              <div class="donor-amount">Rp 100.000</div>
+              <div class="shine" aria-hidden="true"></div>
+            </article>
+
+            <article class="donor-card" role="listitem" data-visible="true" style="--delay:0.12s">
+              <div class="donor-avatar">iGee</div>
+              <div class="donor-info">
+                <div class="donor-name">not_ur_igee</div>
+                <div class="donor-meta"><span class="platform-pill">@igee17 (tiktok)</span><span class="job">Surveyor Pro</span></div>
+              </div>
+              <div class="donor-amount">Rp 100.000</div>
+              <div class="shine" aria-hidden="true"></div>
+            </article>
+
             <article class="donor-card" role="listitem" data-visible="true" style="--delay:0s">
               <div class="donor-avatar">PE</div>
               <div class="donor-info">
@@ -430,7 +450,47 @@
               <div class="donor-amount">Rp 100.000</div>
               <div class="shine" aria-hidden="true"></div>
             </article>
-            <!-- tambah donor statis lebih banyak sesuai kebutuhan -->
+
+            <article class="donor-card" role="listitem" data-visible="true" style="--delay:0.12s">
+              <div class="donor-avatar">SU</div>
+              <div class="donor-info">
+                <div class="donor-name">Surya Utama</div>
+                <div class="donor-meta"><span class="platform-pill">@suryautama0 (tiktok)</span><span class="job">Surveyor Pro</span></div>
+              </div>
+              <div class="donor-amount">Rp 100.000</div>
+              <div class="shine" aria-hidden="true"></div>
+            </article>
+
+            <article class="donor-card" role="listitem" data-visible="true" style="--delay:0.12s">
+              <div class="donor-avatar">CS</div>
+              <div class="donor-info">
+                <div class="donor-name">Crim Soot</div>
+                <div class="donor-meta"><span class="platform-pill">@joki_bakwan (tiktok)</span><span class="job">Surveyor Pro</span></div>
+              </div>
+              <div class="donor-amount">Rp 100.000</div>
+              <div class="shine" aria-hidden="true"></div>
+            </article>
+
+            <article class="donor-card" role="listitem" data-visible="true" style="--delay:0.12s">
+              <div class="donor-avatar">BG</div>
+              <div class="donor-info">
+                <div class="donor-name">Bantug</div>
+                <div class="donor-meta"><span class="platform-pill">@bantughehe (tiktok)</span><span class="job">Surveyor Pro</span></div>
+              </div>
+              <div class="donor-amount">Rp 100.000</div>
+              <div class="shine" aria-hidden="true"></div>
+            </article>
+
+            <article class="donor-card" role="listitem" data-visible="true" style="--delay:0.12s">
+              <div class="donor-avatar">S30</div>
+              <div class="donor-info">
+                <div class="donor-name">Setelah30</div>
+                <div class="donor-meta"><span class="platform-pill">@setelah30_ (tiktok)</span><span class="job">Surveyor Pro</span></div>
+              </div>
+              <div class="donor-amount">Rp 100.000</div>
+              <div class="shine" aria-hidden="true"></div>
+            </article>
+
           </div>
         </div>
       </div>
