--- a/index.html
+++ b/index.html
@@ -430,6 +430,66 @@
               <div class="shine" aria-hidden="true"></div>
             </article>
 
+            <article class="donor-card" role="listitem" data-visible="true" style="--delay:0.12s">
+              <div class="donor-avatar">AFR</div>
+              <div class="donor-info">
+                <div class="donor-name">Alvian F.R.</div>
+                <div class="donor-meta"><span class="platform-pill">@alvian_fr (tiktok)</span><span class="job">Surveyor Pro</span></div>
+              </div>
+              <div class="donor-amount">Rp 100.000</div>
+              <div class="shine" aria-hidden="true"></div>
+            </article>
+
+            <article class="donor-card" role="listitem" data-visible="true" style="--delay:0.12s">
+              <div class="donor-avatar">AB</div>
+              <div class="donor-info">
+                <div class="donor-name">abidin</div>
+                <div class="donor-meta"><span class="platform-pill">@abidinnn_ (tiktok)</span><span class="job">Surveyor Pro</span></div>
+              </div>
+              <div class="donor-amount">Rp 100.000</div>
+              <div class="shine" aria-hidden="true"></div>
+            </article>
+
+            <article class="donor-card" role="listitem" data-visible="true" style="--delay:0.12s">
+              <div class="donor-avatar">KB</div>
+              <div class="donor-info">
+                <div class="donor-name">Kita Bisa</div>
+                <div class="donor-meta"><span class="platform-pill">@Kita Bisa (facebook)</span><span class="job">Surveyor Pro</span></div>
+              </div>
+              <div class="donor-amount">Rp 100.000</div>
+              <div class="shine" aria-hidden="true"></div>
+            </article>
+
+            <article class="donor-card" role="listitem" data-visible="true" style="--delay:0.12s">
+              <div class="donor-avatar">PES</div>
+              <div class="donor-info">
+                <div class="donor-name">Praba Engineering</div>
+                <div class="donor-meta"><span class="platform-pill">@Praba Engineering (facebook)</span><span class="job">Engineering Teacher</span></div>
+              </div>
+              <div class="donor-amount">Rp 100.000</div>
+              <div class="shine" aria-hidden="true"></div>
+            </article>
+
+            <article class="donor-card" role="listitem" data-visible="true" style="--delay:0.12s">
+              <div class="donor-avatar">ES</div>
+              <div class="donor-info">
+                <div class="donor-name">Erwin Saputra</div>
+                <div class="donor-meta"><span class="platform-pill">@Erwin Saputra (facebook)</span><span class="job">Surveyor Pro</span></div>
+              </div>
+              <div class="donor-amount">Rp 100.000</div>
+              <div class="shine" aria-hidden="true"></div>
+            </article>
+
+            <article class="donor-card" role="listitem" data-visible="true" style="--delay:0.12s">
+              <div class="donor-avatar">FM</div>
+              <div class="donor-info">
+                <div class="donor-name">Farhanmunggaran</div>
+                <div class="donor-meta"><span class="platform-pill">@Farhanmunggaran (Instagram)</span><span class="job">Surveyor Pro</span></div>
+              </div>
+              <div class="donor-amount">Rp 100.000</div>
+              <div class="shine" aria-hidden="true"></div>
+            </article>
+
           </div>
         </div>
       </div>
