--- a/index.html
+++ b/index.html
@@ -400,6 +400,196 @@
               <div class="shine" aria-hidden="true"></div>
             </article>
 
+            <article class="donor-card" role="listitem" data-visible="true" style="--delay:0s">
+              <div class="donor-avatar">PE</div>
+              <div class="donor-info">
+                <div class="donor-name">Patop Excellent</div>
+                <div class="donor-meta"><span class="platform-pill">@patop_excellent7<br>(tiktok)</span><span class="job">Surveyor Pro</span></div>
+              </div>
+              <div class="donor-amount">Rp 100.000</div>
+              <div class="shine" aria-hidden="true"></div>
+            </article>
+
+            <article class="donor-card" role="listitem" data-visible="true" style="--delay:0.06s">
+              <div class="donor-avatar">CA</div>
+              <div class="donor-info">
+                <div class="donor-name">catchemtcg.02</div>
+                <div class="donor-meta"><span class="platform-pill">@catchemtcg.02 (tiktok)</span><span class="job">Teteh dari Malaysia</span></div>
+              </div>
+              <div class="donor-amount">Rp 100.000</div>
+              <div class="shine" aria-hidden="true"></div>
+            </article>
+
+            <article class="donor-card" role="listitem" data-visible="true" style="--delay:0.12s">
+              <div class="donor-avatar">IR</div>
+              <div class="donor-info">
+                <div class="donor-name">iedrahmat</div>
+                <div class="donor-meta"><span class="platform-pill">@iedrahmat (tiktok)</span><span class="job">Surveyor Pro</span></div>
+              </div>
+              <div class="donor-amount">Rp 100.000</div>
+              <div class="shine" aria-hidden="true"></div>
+            </article>
+
+            <article class="donor-card" role="listitem" data-visible="true" style="--delay:0s">
+              <div class="donor-avatar">SU</div>
+              <div class="donor-info">
+                <div class="donor-name">Surya Utama</div>
+                <div class="donor-meta"><span class="platform-pill">@suryautama0 (tiktok)</span><span class="job">Surveyor Pro</span></div>
+              </div>
+              <div class="donor-amount">Rp 100.000</div>
+              <div class="shine" aria-hidden="true"></div>
+            </article>
+
+            <article class="donor-card" role="listitem" data-visible="true" style="--delay:0.06s">
+              <div class="donor-avatar">CS</div>
+              <div class="donor-info">
+                <div class="donor-name">Crim Soot</div>
+                <div class="donor-meta"><span class="platform-pill">@joki_bakwan (tiktok)</span><span class="job">Surveyor Pro</span></div>
+              </div>
+              <div class="donor-amount">Rp 100.000</div>
+              <div class="shine" aria-hidden="true"></div>
+            </article>
+
+            <article class="donor-card" role="listitem" data-visible="true" style="--delay:0.12s">
+              <div class="donor-avatar">BG</div>
+              <div class="donor-info">
+                <div class="donor-name">Bantug</div>
+                <div class="donor-meta"><span class="platform-pill">@bantughehe (tiktok)</span><span class="job">Surveyor Pro</span></div>
+              </div>
+              <div class="donor-amount">Rp 100.000</div>
+              <div class="shine" aria-hidden="true"></div>
+            </article>
+
+            <article class="donor-card" role="listitem" data-visible="true" style="--delay:0s">
+              <div class="donor-avatar">S30</div>
+              <div class="donor-info">
+                <div class="donor-name">Setelah30</div>
+                <div class="donor-meta"><span class="platform-pill">@setelah30_ (tiktok)</span><span class="job">Surveyor Pro</span></div>
+              </div>
+              <div class="donor-amount">Rp 100.000</div>
+              <div class="shine" aria-hidden="true"></div>
+            </article>
+
+            <article class="donor-card" role="listitem" data-visible="true" style="--delay:0.06s">
+              <div class="donor-avatar">AFR</div>
+              <div class="donor-info">
+                <div class="donor-name">Alvian F.R.</div>
+                <div class="donor-meta"><span class="platform-pill">@alvian_fr (tiktok)</span><span class="job">Surveyor Pro</span></div>
+              </div>
+              <div class="donor-amount">Rp 100.000</div>
+              <div class="shine" aria-hidden="true"></div>
+            </article>
+
+            <article class="donor-card" role="listitem" data-visible="true" style="--delay:0.12s">
+              <div class="donor-avatar">AB</div>
+              <div class="donor-info">
+                <div class="donor-name">abidin</div>
+                <div class="donor-meta"><span class="platform-pill">@abidinnn_ (tiktok)</span><span class="job">Surveyor Pro</span></div>
+              </div>
+              <div class="donor-amount">Rp 100.000</div>
+              <div class="shine" aria-hidden="true"></div>
+            </article>
+
+            <article class="donor-card" role="listitem" data-visible="true" style="--delay:0s">
+              <div class="donor-avatar">KB</div>
+              <div class="donor-info">
+                <div class="donor-name">Kita Bisa</div>
+                <div class="donor-meta"><span class="platform-pill">@Kita Bisa (facebook)</span><span class="job">Surveyor Pro</span></div>
+              </div>
+              <div class="donor-amount">Rp 100.000</div>
+              <div class="shine" aria-hidden="true"></div>
+            </article>
+
+            <article class="donor-card" role="listitem" data-visible="true" style="--delay:0.06s">
+              <div class="donor-avatar">PES</div>
+              <div class="donor-info">
+                <div class="donor-name">Praba Engineering</div>
+                <div class="donor-meta"><span class="platform-pill">@Praba Engineering<br>(facebook)</span><span class="job">Engineering Teacher</span></div>
+              </div>
+              <div class="donor-amount">Rp 100.000</div>
+              <div class="shine" aria-hidden="true"></div>
+            </article>
+
+            <article class="donor-card" role="listitem" data-visible="true" style="--delay:0.12s">
+              <div class="donor-avatar">ES</div>
+              <div class="donor-info">
+                <div class="donor-name">Erwin Saputra</div>
+                <div class="donor-meta"><span class="platform-pill">@Erwin Saputra<br>(facebook)</span><span class="job">Surveyor Pro</span></div>
+              </div>
+              <div class="donor-amount">Rp 100.000</div>
+              <div class="shine" aria-hidden="true"></div>
+            </article>
+
+            <article class="donor-card" role="listitem" data-visible="true" style="--delay:0s">
+              <div class="donor-avatar">FM</div>
+              <div class="donor-info">
+                <div class="donor-name">Farhanmunggaran</div>
+                <div class="donor-meta"><span class="platform-pill">@Farhanmunggaran<br>(Instagram)</span><span class="job">Surveyor Pro</span></div>
+              </div>
+              <div class="donor-amount">Rp 100.000</div>
+              <div class="shine" aria-hidden="true"></div>
+            </article>
+
+            <article class="donor-card" role="listitem" data-visible="true" style="--delay:0s">
+              <div class="donor-avatar">AL</div>
+              <div class="donor-info">
+                <div class="donor-name">Alim</div>
+                <div class="donor-meta"><span class="platform-pill">@Alimlewy98<br>(Tiktok)</span><span class="job">Surveyor Pro</span></div>
+              </div>
+              <div class="donor-amount">Rp 100.000</div>
+              <div class="shine" aria-hidden="true"></div>
+            </article>
+
+            <article class="donor-card" role="listitem" data-visible="true" style="--delay:0s">
+              <div class="donor-avatar">BS</div>
+              <div class="donor-info">
+                <div class="donor-name">Bagus</div>
+                <div class="donor-meta"><span class="platform-pill">@masbagus363<br>(Tiktok)</span><span class="job">Surveyor Pro</span></div>
+              </div>
+              <div class="donor-amount">Rp 100.000</div>
+              <div class="shine" aria-hidden="true"></div>
+            </article>
+
+            <article class="donor-card" role="listitem" data-visible="true" style="--delay:0s">
+              <div class="donor-avatar">JH</div>
+              <div class="donor-info">
+                <div class="donor-name">JHZON</div>
+                <div class="donor-meta"><span class="platform-pill">@rizonoktv<br>(Tiktok)</span><span class="job">Surveyor Pro</span></div>
+              </div>
+              <div class="donor-amount">Rp 100.000</div>
+              <div class="shine" aria-hidden="true"></div>
+            </article>
+
+            <article class="donor-card" role="listitem" data-visible="true" style="--delay:0s">
+              <div class="donor-avatar">PH</div>
+              <div class="donor-info">
+                <div class="donor-name">Polroha</div>
+                <div class="donor-meta"><span class="platform-pill">@polroha2<br>(Tiktok)</span><span class="job">Surveyor Pro</span></div>
+              </div>
+              <div class="donor-amount">Rp 100.000</div>
+              <div class="shine" aria-hidden="true"></div>
+            </article>
+
+            <article class="donor-card" role="listitem" data-visible="true" style="--delay:0s">
+              <div class="donor-avatar">SS</div>
+              <div class="donor-info">
+                <div class="donor-name">Sauss</div>
+                <div class="donor-meta"><span class="platform-pill">@.udontmattertome<br>(Tiktok)</span><span class="job">Surveyor Pro</span></div>
+              </div>
+              <div class="donor-amount">Rp 100.000</div>
+              <div class="shine" aria-hidden="true"></div>
+            </article>
+
+            <article class="donor-card" role="listitem" data-visible="true" style="--delay:0s">
+              <div class="donor-avatar">WS</div>
+              <div class="donor-info">
+                <div class="donor-name">WS 99</div>
+                <div class="donor-meta"><span class="platform-pill">@w.sudir<br>(Tiktok)</span><span class="job">Surveyor Pro</span></div>
+              </div>
+              <div class="donor-amount">Rp 100.000</div>
+              <div class="shine" aria-hidden="true"></div>
+            </article>
+
           </div>
         </div>
       </div>
@@ -910,4 +1100,5 @@
   </script>
 </body>
 </html>
+
 
