--- a/index.html
+++ b/index.html
@@ -241,9 +241,9 @@
 
   <header class="container">
     <div class="logo">
-      <div class="mark">V.8.2</div>
+      <div class="mark">V.8.5</div>
       <div>
-        <div style="font-weight:700;letter-spacing:0.6px">  Okto Drone Autopilot Mapper Pro</div>
+        <div style="font-weight:700;letter-spacing:0.6px">  Okto Drone Autopilot Mapper Pro<br> New Update V.8.5(Contact saya di Tiktok untuk Update Terbaru) </div>
         <div style="font-size:12px;color:rgba(255,255,255,0.35)">  Profesional & Easy To Use</div>
       </div>
     </div>
@@ -1124,3 +1124,4 @@
   </script>
 </body>
 </html>
+
