--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
       <div class="mark">V.8.5</div>
       <div>
         <div style="font-weight:700;letter-spacing:0.6px">  Okto Drone Autopilot Mapper Pro<br> New Update V.8.5(Contact saya di Tiktok untuk Update Terbaru) </div>
-        <div style="font-size:12px;color:rgba(255,255,255,0.35)">  Profesional & Easy To Use</div>
+        <div style="font-size:12px;color:rgb(255, 238, 0)">  Profesional & Easy To Use</div>
       </div>
     </div>
     <nav role="navigation" aria-label="Main navigation">
@@ -1124,4 +1124,5 @@
   </script>
 </body>
 </html>
+
 
